analogue Change Log

Version 0.6-3

	* analog: was converting 'x' and 'y' objects to matrices before
	calling distance(). This broke handling of factor variables in
	'method = "mixed"' with distance().

	* distance: objects created by distance() now have an explicit 
	class "distance", and inherit from class "matrix".

Version 0.6-2

	* Stratiplot: new graphics function for plotting stratigraphic
	diagrams, with 'default' and 'formula' methods. Uses the Lattice 
	package for plotting.

	* panel.Stratiplot: lattice panel function for drawing stratigraphic
	diagrams.

	* panel.Loess: modified version of standard lattice panel function
	'panel.loess' for drawing LOESS smooths on stratigraphic diagrams.

	* Documentation: fixes and tweaks to several Rd files to fix parse
	errors caught with the new Rd parser coming in R 2.9.0. 
	
Version 0.6-1

	* ImbrieKipp: made the training set environment and sediment core
	data set names easier to manage. The three environmental variables
	are now in seperate data sets ('SumSST', 'WinSST', and 'Salinity')
	as named, numeric vectors of the same name as the data sets.

	* mat: example now uses the ImbrieKipp data resulting in large
	speed-up.

	* Requires: package now depends on package 'brglm' for use in
	modelling probability of analogue or not. For future 'logitReg()'
	function.

Version 0.6-0

	* roc: new version of roc, which correctly computes the no-analogue
	part of the ROC analysis. Now roc returns information on individual
	grops as well as an overall or combined ROC curve for the data.

	The number of close analogues to use in computing the ROC curve
	can now also be specified.

	These changes have altered bayesF() and the plot methods for bayesF
	roc. bayesF now computes Bayes factors for all groups as well as
	for the overall ROC analysis.

	The plot method for bayesF will now plot the Bayes factors for all 
	groups or for a single, named group. plot.roc has been updated to 